# RustGravity

./: .gitignore  Cargo.toml  README.md
frontend/src/: App.tsx  socket.js
frontend/src/components/: CoordinatesDisplay.jsx  SimulationConfigurator.jsx
src/: main.rs  space_computation.rs
