[package]
name = "RustGravity"
version = "1.0.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6.4", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3"
num_enum = "0.7.3"
nalgebra = "0.33.2"
futures = "0.3.31"
uuid = { version = "1.17.0", features = ["v4"] }
